2003-09-17  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.init, texi2html.pl: change 'about (this page)' to 
	'about (help)' as this appears in the title= of the <a> element.
	ignore @afourlatex, @afourwide, @firstparagraphindent, @exampleindent,
	handle @definfoenclose, @kbdinputstyle, @novalidate, @centerchap (but 
	without centering), @documentdescription.
	add -novalidate option.

2003-09-15  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.init, texi2html.pl: add &$Texi2HTML::Config::one_section
	for formatting of document with only one section.
	find when an element is the first element on a page.
	add &$Texi2HTML::Config::end_section, called when an element is 
	finished unless it is the end of a page and do less in print_section
	Don't use $ADDRESS anymore. 
	Change &$Texi2HTML::Config::external_ref such that it is easier to
	internationalize.

2003-09-13  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.init, texi2html.pl: mark strings of buttons, about, 
	definitions and footers for internationalization.
	new function reference $set_buttons_text used to generate the
	button text hashes dynamically (for internationalization).
	require all files in i18n/* for languages.
	* i18n/fr: translate strings related with buttons, about,
	definitions and footers in french. 

2003-09-12  Patrice Dumas <dumas@centre-cired.fr>

	* manage_i18n.pl: remove \ from strings when finding out strings
	to translate.
	* i18n/fr: translate strings related with references.

2003-09-12  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: 0 is accepted as a value for
	the reference arguments.
	rewrite from scratch the functions handling references in .init 
	files to put them in the public domain. Avoid string concatenation
	to ease internationalization.

2003-09-11  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, T2h_i18n.pm, manage_i18n.pl,
	configure.in:
	The ideas come from Derek.